Day 9, part 2, Hallelujah